fix(FEV-1198): dynamic scrollbars (on hover)

--- a/src/components/quiz-question/multi-choice/multi-choice.scss
+++ b/src/components/quiz-question/multi-choice/multi-choice.scss
@@ -17,9 +17,12 @@
   .optionalAnswersWrapper {
     display: flex;
     flex-direction: row;
-    overflow: auto;
+    overflow: hidden;
     margin-top: 16px;
-    @include without-scrollbar;
+    @include ivq-scrollbar;
+    &:hover {
+      overflow: auto;
+    }
 
     .optionalAnswersContainer {
       display: flex;
